fix: fixed letter spacing issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,6 @@
     align-items: center;
     background-color: #1c0902;
     font-family: "PixelCode";
-    letter-spacing: normal;
 }
 
 
